syntax = "proto3";
package p2pmsg;

import "google/protobuf/any.proto";

option go_package = "./;p2pmsg";


message DecryptionTrigger {
  uint64 instance_id = 1;
  bytes identity_preimage = 2;
  uint64 block_number = 3;
  bytes transactions_hash = 4;
  bytes signature = 5;
}

message KeyShare {
  bytes identity_preimage = 1;
  bytes share = 2;
}

message GnosisDecryptionKeySharesExtra {
  uint64 slot = 1;
  uint64 tx_pointer = 2;
  bytes signature = 3;
}

message ShutterServiceDecryptionKeySharesExtra {
  bytes signature = 1;
}

message OptimismDecryptionKeySharesExtra {}

message DecryptionKeyShares {
  uint64 instance_id = 1;
  uint64 eon = 4;
  uint64 keyper_index = 5;
  repeated KeyShare shares = 9;
  oneof extra {
    GnosisDecryptionKeySharesExtra gnosis = 10;
    OptimismDecryptionKeySharesExtra optimism = 11;
    ShutterServiceDecryptionKeySharesExtra service = 12;
  }
}

message Key {
  bytes identity_preimage = 1;
  bytes key = 2;
}

message GnosisDecryptionKeysExtra {
  uint64 slot = 1;
  uint64 tx_pointer = 2;
  repeated uint64 signer_indices = 3;
  repeated bytes signatures = 4;
}

message OptimismDecryptionKeysExtra {}

message ShutterServiceDecryptionKeysExtra {
  repeated uint64 signer_indices = 1;
  repeated bytes signature = 2;
}

message DecryptionKeys {
  uint64 instance_id = 1;
  uint64 eon = 2;
  repeated Key keys = 3;
  oneof extra {
    GnosisDecryptionKeysExtra gnosis = 4;
    OptimismDecryptionKeysExtra optimism = 5;
    ShutterServiceDecryptionKeysExtra service = 6;
  }
}

// EonPublicKey is sent by the keypers to publish the EonPublicKey for a certain
// eon.  For those that observe it, e.g. the collator, it's a candidate until
// the observer has seen at least threshold messages.
message EonPublicKey {
  uint64 instance_id = 1;
  bytes public_key = 2;
  uint64 activation_block = 3;
  uint64 keyper_config_index = 6;
  uint64 eon = 7;
  bytes signature = 5;
}


message TraceContext {
  bytes trace_id = 1;
  bytes span_id = 2;
  bytes trace_flags = 3;
  string trace_state = 4;
}

message Envelope {
  string version = 1;
  google.protobuf.Any message = 2;
  optional TraceContext trace = 3;
}

message Commitment {
  uint64 instance_id = 1;
  repeated string tx_hashes = 2;
  string bid_amount = 3;
  int64 block_number = 4;
  string received_bid_digest = 5;
  string received_bid_signature = 6;
  string commitment_digest = 7;
  string commitment_signature = 8;
  string provider_address = 9;
  int64 decay_start_timestamp = 10;
  int64 decay_end_timestamp = 11;
  int64 dispatch_timestamp = 12;
  repeated string reverting_tx_hashes = 13;
  string slash_amount = 14;
  repeated string identities = 15;
};